<resources>
    <string name="app_name">Heat</string>
    <string name="app_desc">Healthy Eat</string>
    <string name="skip">skip</string>
    <string name="First_intro_headline">Have a healthier \nlifestyle with</string>
    <string name="First_intro_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="Second_intro_headline">How does HEAT Work?</string>
    <string name="Second_intro_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="Third_intro_headline">Ready to \nGet Started?</string>
    <string name="Third_intro_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="login">Login</string>
    <string name="login_intro">Login to your account and \nhaving healthy diet</string>
    <string name="your_username">your Username</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="do_not_have_an_account">Do not have an account?   </string>
    <string name="register">Register</string>
    <string name="register_intro">Do not waist any more time \nstart a healthier life</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="First_page_text">Enter Your Personal Data</string>
    <string name="First_page_name">Name</string>
    <string name="First_page_height">Height</string>
    <string name="First_page_weight">Weight</string>
    <string name="First_page_age">Age</string>
    <string name="First_page_sex">Gender</string>
    <string name="First_page_male">Male</string>
    <string name="First_page_female">Female</string>
    <string name="Second_page_text">How Active Are You?</string>
    <string name="Second_page_sedentary">Sedentary active</string>
    <string name="Second_page_lightly">Lightly active</string>
    <string name="Second_page_moderately">Moderately active</string>
    <string name="Second_page_very">Very active</string>
    <string name="Second_page_extra">Extra active</string>
    <string name="Third_page_text">What Is Your Abstract Goal?</string>
    <string name="Third_page_lose">Lose Weight</string>
    <string name="Third_page_maintain">Maintain Weight</string>
    <string name="Third_page_gain">Gain Weight</string>
    <string name="Third_page_target_weight">Your target weight (optional)</string>
    <string name="Forth_page_text">Choose Your Diet Type</string>
    <string name="Forth_page_any_thin">Any Thing</string>
    <string name="Forth_page_any_thing_exclude">Exclude: Nothing</string>
    <string name="Forth_page_vegetarian">Vegetarian</string>
    <string name="Forth_page_vegetarian_exclude">Exclude: read meat, fish, shellfill</string>
    <string name="Forth_page_vegan">Vegan</string>
    <string name="Forth_page_vegan_exclude">Exclude: red meat, fish, shellfish, diary, egg, honey</string>
    <string name="Forth_page_kosher">Kosher</string>
    <string name="Forth_page_kosher_exclude">Exclude: pork, rabbit, horse meat, bear, shellfish, shark, eel, octopus, octopuses, frog</string>
    <string name="Forth_page_muslim">Muslim</string>
    <string name="Forth_page_muslin_exclude">Exclude: pork, blood sausage, blood, blood pudding, alcohol, grain alcohol, pure grain alcohol, ethyl alcohol</string>
    <string name="Fifth_page_text">Do You Have Any Ingredient Allergies?</string>
    <string name="Fifth_page_gluten">Gluten</string>
    <string name="Fifth_page_peanuts">Peanuts</string>
    <string name="Fifth_page_egg">Egg</string>
    <string name="Fifth_page_fish">Fish</string>
    <string name="Fifth_page_shellfish">Shellfish</string>
    <string name="Fifth_page_diary">Diary</string>
    <string name="Fifth_page_more">Type any more ingredient you wish(optional)</string>
    <string name="Sixth_page_text">Do You Have Any Of The Following Disease?</string>
    <string name="Sixth_page_diabetes">Diabetes</string>
    <string name="Sixth_page_osteoporosis">Osteoporosis</string>
    <string name="Sixth_page_heart_disease">Heart Disease</string>
    <string name="Sixth_page_blood_pressure">High Blood Pressure</string>
    <string name="Sixth_page_kidney_disease">Kidney Disease</string>
    <string name="Sixth_page_anemia">Anemia</string>
    <string name="Seventh_page_text">Our Daily Nutrition Suggestion</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="today_meals">Today Meals</string>
    <string name="track_foods">Track Foods ></string>
    <string name="weeks_progress">Weeks Progress</string>
    <string name="current">current</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="carbo">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="all_recipes">All Foods</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="main_course">Main Course</string>
    <string name="see_all">See All</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="filter_meal_type_hint">Meal Type</string>
    <string name="filter_meal_type_all">all</string>
    <string name="filter_meal_type_breakfast">breakfast</string>
    <string name="filter_meal_type_main_course">main course</string>
    <string name="filter_meal_type_dessert">dessert</string>
    <string name="filter_meal_type_appetizer">appetizer</string>
    <string name="filter_meal_type_salad">salad</string>
    <string name="filter_meal_type_bread">bread</string>
    <string name="filter_meal_type_soup">soup</string>
    <string name="filter_meal_type_beverage">beverage</string>
    <string name="filter_meal_type_sauce">sauce</string>
    <string name="filter_meal_type_finger_food">fingerfood</string>
    <string name="filter_meal_type_drink">drink</string>
    <string name="filter_meal_type_snack">snack</string>
    <string name="filter_meal_type_side_dish">side dish</string>
    <string name="filter_diet_type_hint">Diet Type</string>
    <string name="filter_diet_type_all">all</string>
    <string name="filter_diet_type_vegetarian">vegetarian</string>
    <string name="filter_diet_type_vegan">vegan</string>
    <string name="filter_diet_type_very_healthy">veryHealthy</string>
    <string name="filter_diet_type_glutenFree">glutenFree</string>
    <string name="filter_diet_type_diaryFree">diaryFree</string>
    <string name="filter_cuisine_type_hint">Cuisine</string>
    <string name="filter_cuisine_type_asian">Asian</string>
    <string name="filter_cuisine_type_african">African</string>
    <string name="filter_cuisine_type_american">American</string>
    <string name="filter_cuisine_type_british">British</string>
    <string name="filter_cuisine_type_chinese">Chinese</string>
    <string name="filter_cuisine_type_ee">EasternEuropean</string>
    <string name="filter_cuisine_type_ca">CentralAmerican</string>
    <string name="filter_cuisine_type_european">European</string>
    <string name="filter_cuisine_type_french">French</string>
    <string name="filter_cuisine_type_german">German</string>
    <string name="filter_cuisine_type_greek">Greek</string>
    <string name="filter_cuisine_type_indian">Indian</string>
    <string name="filter_cuisine_type_irish">Irish</string>
    <string name="filter_cuisine_type_italian">Italian</string>
    <string name="filter_cuisine_type_japanese">Japanese</string>
    <string name="filter_cuisine_type_jewish">Jewish</string>
    <string name="filter_cuisine_type_korean">Korean</string>
    <string name="filter_cuisine_type_la">LatinAmerican</string>
    <string name="filter_cuisine_type_mediterranean">Mediterranean</string>
    <string name="filter_cuisine_type_mexican">Mexican</string>
    <string name="filter_cuisine_type_me">MiddleEastern</string>
    <string name="filter_cuisine_type_nordic">Nordic</string>
    <string name="filter_cuisine_type_sa">SouthAmerican</string>
    <string name="filter_cuisine_type_spanish">Spanish</string>
    <string name="filter_cuisine_type_thai">Thai</string>
    <string name="filter_cuisine_type_vietnamese">Vietnamese</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="active_level">Active Level</string>
    <string-array name="diet_type">
        <item>@string/filter_diet_type_all</item>
        <item>@string/filter_diet_type_vegetarian</item>
        <item>@string/filter_diet_type_vegan</item>
        <item>@string/filter_diet_type_glutenFree</item>
        <item>@string/filter_diet_type_diaryFree</item>
    </string-array>
    <string name="abstract_goal">Abstract Goal</string>
    <string name="Ingredient_allergy">Ingredient Allergy</string>
    <string name="disease">Disease</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="your_Account">Your Account</string>
    <string name="upgrade_to_premium">Upgrade to Premium for more features</string>
    <string name="contact_us">Contact Us</string>
    <string name="Logout">Logout</string>
    <string name="general_setting">General Setting</string>
    <string name="detail_ingredients">Ingredients</string>
    <string name="detail_instruction">Instruction</string>
    <string name="detail_full_instruction">full instruction</string>
    <string name="detail_sample_instruction">Beat the cream cheese and mayo in a bowl with a hand mixer until creamy and spreadable, and then mix in the peanuts.</string>
    <string name="today_foods">Today Foods</string>
    <string name="analytics">Analytics</string>
    <string name="next_page">Next page</string>
    <string name="previous_page">Previous page</string>
    <string name="next">Next </string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="get_started">Get Started</string>
    <string name="complete_all_parts">Complete All Parts</string>
    <string name="save">save</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="calories_range">Calories Range</string>
    <string name="filter_search_result">Filter</string>
    <string name="generate_your_plan">Generate Your Plan</string>
    <string name="appearance">Appearance</string>
    <string name="preference">Preferences</string>
    <string name="theme">Theme</string>
    <string name="light">light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notification">Notification</string>
    <string name="show_notification">Show Notification</string>
    <string name="breakfast_notification">Breakfast Notification</string>
    <string name="lunch_notification">Lunch Notification</string>
    <string name="dinner_notification">Dinner Notification</string>
    <string name="snack_notification">Snack Notification</string>
    <string name="water_reminder">Water Reminder</string>
    <string name="meal_plan">Number of meal plan</string>
</resources>