<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.survay.DiseaseFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mega_margin"
        android:text="@string/Sixth_page_text"
        android:textColor="@color/black"
        android:textSize="@dimen/big_font"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf = "@id/back_arrow"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/allergy_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mega_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@id/title_disease">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_diabetes"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_diabetes"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_osteoporosis"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_osteoporosis"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_heart_disease"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_heart_disease"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_fish"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_blood_pressure"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_kidney_disease"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_kidney_disease"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_anemia"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:text="@string/Sixth_page_anemia"/>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>