<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.heat.ui.custom.RecipeView
            android:id="@+id/all_recipesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:action="@string/see_all"
            app:title="@string/all_recipes" />

        <com.example.heat.ui.custom.RecipeView
            android:id="@+id/breakfast_recipesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/all_recipesListView"
            app:title="@string/breakfast"
            app:action="@string/see_all"/>

        <com.example.heat.ui.custom.RecipeView
            android:id="@+id/snack_recipesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breakfast_recipesListView"
            app:title="@string/snack"
            app:action="@string/see_all"/>

        <com.example.heat.ui.custom.RecipeView
            android:id="@+id/main_course_recipesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/snack_recipesListView"
            app:layout_constraintBottom_toBottomOf= "parent"
            app:title="@string/main_course"
            app:action="@string/see_all"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>