<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.survay.ActivrlevelFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_active_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mega_margin"
        android:text="@string/Second_page_text"
        android:textColor="@color/black"
        android:textSize="@dimen/big_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@id/back_arrow" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group_active_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/mega_margin"
        app:layout_constraintTop_toBottomOf = "@id/title_active_level"
        android:orientation="vertical"
        app:singleSelection="true"
        android:showDividers="middle"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sedentary"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:minLines="3"
            android:textAllCaps="false"
            android:text="@string/Second_page_sedentary"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lightly"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textAllCaps="false"
            android:text="@string/Second_page_lightly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/moderately"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textAllCaps="false"
            android:text="@string/Second_page_moderately" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/very"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textAllCaps="false"
            android:text="@string/Second_page_very" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/extra"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textAllCaps="false"
            android:text="@string/Second_page_extra" />


    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.constraintlayout.widget.ConstraintLayout>